<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CurrentFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/weatherImage"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/degreesImage"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_below="@+id/timeView"
        android:layout_marginTop="21dp"
        android:layout_toEndOf="@+id/weatherImage"
        android:contentDescription="@string/degreeImage"
        app:srcCompat="@drawable/degree" />

    <ImageView
        android:id="@+id/weatherImage"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/weatherImage"
        app:srcCompat="@drawable/partly_cloudy"
        android:adjustViewBounds="true"
        tools:ignore="ContentDescription"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/locationName"
        android:textColor="@android:color/background_light"
        android:textSize="22sp"
        android:layout_below="@+id/weatherImage"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/timeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/latitude"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/timeStamp1"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/temperatureView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timeView"
        android:layout_centerHorizontal="true"
        android:text="@string/temperatureLabel"
        android:textColor="@android:color/background_light"
        android:textSize="125sp" />

    <ImageView
        android:id="@+id/feelsLikeDegreesImage"
        android:layout_width="5dp"
        android:layout_height="5dp"
        android:contentDescription="@string/degreeImage"
        app:srcCompat="@drawable/degree"
        android:layout_alignTop="@+id/feelsLikeDegrees"
        android:layout_toEndOf="@+id/feelsLikeDegrees" />

    <TextView
        android:id="@+id/humidityPercentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidityPercent"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:layout_below="@+id/humidityTextView"
        android:layout_alignStart="@+id/humidityTextView" />

    <TextView
        android:id="@+id/speedKmTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speedNumbers"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:layout_below="@+id/humidityTextView"
        android:layout_alignStart="@+id/windSpeedTextView" />

    <TextView
        android:id="@+id/rainPercentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rainPercent"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:layout_below="@+id/rainTextView"
        android:layout_alignStart="@+id/rainTextView" />

    <TextView
        android:id="@+id/windSpeedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/windSpeed"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        android:layout_alignBaseline="@+id/humidityTextView"
        android:layout_alignBottom="@+id/humidityTextView"
        android:layout_alignStart="@+id/weatherImage" />

    <TextView
        android:id="@+id/rainTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rain"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        android:layout_alignBaseline="@+id/windSpeedTextView"
        android:layout_alignBottom="@+id/windSpeedTextView"
        android:layout_alignEnd="@+id/latitude" />

    <TextView
        android:id="@+id/humidityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        android:layout_below="@+id/feelsLike"
        android:layout_toStartOf="@+id/timeView"
        android:layout_marginTop="14dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feelsLikeDegreeView"
        android:textColor="@android:color/darker_gray"
        android:id="@+id/feelsLikeDegrees"
        android:layout_below="@+id/temperatureView"
        android:layout_toEndOf="@+id/feelsLike"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/feelsLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feelsLikeView"
        android:textColor="@android:color/darker_gray"
        android:layout_alignBaseline="@+id/feelsLikeDegrees"
        android:layout_alignBottom="@+id/feelsLikeDegrees"
        android:layout_alignStart="@+id/windSpeedTextView" />

    <TextView
        android:id="@+id/percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percent"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:layout_below="@+id/humidityTextView"
        android:layout_alignStart="@+id/latitude"
        android:layout_marginStart="23dp" />

    <TextView
        android:id="@+id/km"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/km"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        android:layout_alignBaseline="@+id/speedKmTextView"
        android:layout_alignBottom="@+id/speedKmTextView"
        android:layout_toEndOf="@+id/speedKmTextView" />

    <TextView
        android:id="@+id/percent2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percent2"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:layout_alignBaseline="@+id/km"
        android:layout_alignBottom="@+id/km"
        android:layout_alignEnd="@+id/rainTextView" />

    <TextView
        android:id="@+id/summaryView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/speedKmTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/summary"
        android:textColor="@android:color/background_light"
        android:textSize="22sp" />


</RelativeLayout>
